making route work

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Practical Test</title>
 </head>
+
 <body>
-  <div id="content"></section>
-<script src="bundle.js"></script><script src="bundle.js"></script></body>
+  <div id="content"></div>
+</body>
+
 </html>
